tests/bad/alias.q
fun f (x : t) : t = x
fun main () : unit = ()
